# CourseProject2

./: coverage_report.txt  main.py  pyproject.toml
data/: vacancies.json
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/: api.py  files.py  vacancy.py
tests/: test_api.py  test_files.py  test_vacancy.py
