[tool.poetry]
name = "course-project-2"
version = "0.1.0"
description = ""
authors = ["NazKar@Nazir <karimov.nazir00@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
